# goit-python-web-hw10b

./: README.md  pyproject.toml  start-postgres.bat  start-postgres.sh
quotes_project/quotes_app/: models.py  urls.py  views.py
quotes_project/quotes_app/migrations/: 0001_initial.py
quotes_project/quotes_app/templates/quotesapp/: base.html  index.html
quotes_project/quotes_project/: settings.py  urls.py
